[gd_scene load_steps=5 format=3 uid="uid://7do70cge7d3l"]

[ext_resource type="Script" path="res://Scripts/EnemySpawner.gd" id="1_iowmb"]
[ext_resource type="PackedScene" uid="uid://dvsd0rwp4ui48" path="res://Scenes/Enemy_Scene.tscn" id="2_e6xxq"]
[ext_resource type="Texture2D" uid="uid://cug2iu1pm1klp" path="res://Sprites/Background/background top.png" id="3_1nif4"]

[sub_resource type="Curve2D" id="Curve2D_wh5ai"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 256, 0)
}
point_count = 2

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_iowmb")
zomb = ExtResource("2_e6xxq")
startWaitTime = 3.0

[node name="BackgroundTop" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(0, -32)
texture = ExtResource("3_1nif4")
centered = false

[node name="BackgroundTop2" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(-256, -32)
texture = ExtResource("3_1nif4")
centered = false

[node name="BackgroundTop3" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(256, -32)
texture = ExtResource("3_1nif4")
centered = false

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_wh5ai")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
